[metadata]
name = traversal
version = 0.0.1
author = Mikhail Philippov
author_email = philippovmihail92@gmail.com
description = get matrix from server and traverse it
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SiberiaMan
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

